[metadata]
name = qyte
version = 0.0.1
description = Qyte is a virtual machine, bytecode and compilation target.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qexat/qyte
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.11
package_dir =
    =src
